--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "xank-webtool",
-  "private": true,
+  "private": false,
   "main": "app/scripts/main.js",
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
@@ -14,6 +14,5 @@
         "assets/javascripts/bootstrap.js"
       ]
     }
-  },
-  "private": true
+  }
 }
